Using Hibernate JPA PersistenceConfiguration